--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,7 +18,8 @@ jobs:
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ec2-184-73-149-8.compute-1.amazonaws.com >> ~/.ssh/known_hosts
+          ssh-keyscan -H 184.73.149.8 >> ~/.ssh/known_hosts
+
 
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@ec2-184-73-149-8.compute-1.amazonaws.com << 'EOF'
             set -e  # Exit on error
