--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,8 +21,8 @@ jobs:
           ssh-keyscan -H 184.73.149.8 >> ~/.ssh/known_hosts
 
 
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@ec2-184-73-149-8.compute-1.amazonaws.com << 'EOF'
-            set -e  # Exit on error
+          ssh -i ~/.ssh/id_rsa ubuntu@ec2-184-73-149-8.compute-1.amazonaws.com << 'EOF'
+            set -e  # Exit on errors
             cd timchem || exit 1
             git pull origin main
             cd my-app
