--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,31 +1,34 @@
 name: Deploy
 
-on: 
-  push: 
+on:
+  push:
     branches: [main]
 
-jobs: 
-  deploy: 
+jobs:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Deploy to server
-        env: 
+      - name: Deploy to EC2
+        env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
+          # Set up SSH
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+          
+          # Add host key (avoids host verification prompt)
           ssh-keyscan -H 184.73.149.8 >> ~/.ssh/known_hosts
 
-
-          ssh -i ~/.ssh/id_rsa ubuntu@ec2-184-73-149-8.compute-1.amazonaws.com << 'EOF'
-            set -e  # Exit on errors
+          # Run remote deploy
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@184.73.149.8 '
+            set -e
             cd timchem || exit 1
             git pull origin main
             cd my-app
-            chmod 400 cicd-deploy.sh
+            chmod +x cicd-deploy.sh
             ./cicd-deploy.sh
-          EOF
+          '
