--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 NODE_ENV="development"
 PORT=5000
-MONGODB_URI="mongodb://mongo:27017/timichemdb"
+MONGODB_URI="mongodb://localhost:27017/timchemdb"
 JWT_SECRET="timchem"
 JWT_EXPIRE="30d"
 
