--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,5 +34,35 @@ services:
       - .env
     restart: always
 
+  nginx:
+    image: nginx:alpine
+    container_name: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/ssl:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    depends_on:
+      - frontend
+      - backend
+    restart: always
+
+  certbot:
+    build: ./certbot
+    container_name: certbot
+    volumes:
+      - ./nginx/ssl:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: >
+      sh -c "certbot certonly --webroot --webroot-path=/var/www/certbot
+      --email okekolawoles36@email.com --agree-tos --no-eff-email
+      -d timichem.duckdns.org &&
+      crontab -l | {{ cat; echo '0 0 * * * certbot renew --webroot-path=/var/www/certbot --quiet'; }} | crontab - &&
+      crond -f"
+
+  
+
 volumes:
   mongo_data:
